# toolTamer

./: .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
configuration/: index.html
docs/: configuration.md  getting-started.md  howtos.md  index.md  installation.md
docs/superpowers/plans/: 2026-04-23-textual-tui-rewrite.md
getting-started/: index.html
howtos/: index.html
installation/: index.html
search/: search_index.json
tests/: conftest.py  test_config.py  test_dashboard.py  test_dir_tracking.py  test_files_screen.py  test_system.py
tui/: __init__.py  app.py  styles.tcss
tui/core/: __init__.py  config.py  system.py
tui/screens/: __init__.py  _add_package.py  _dest_picker.py  dashboard.py  files.py  local_install.py  packages.py  sync.py  taps.py
tui/widgets/: __init__.py  config_tree.py  status_bar.py
